--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ build/
 !**/src/test/**/build/
 logs/
 src/main/resources/application*.yml
+!src/main/resources/application-test.yml
 
 ### STS ###
 .apt_generated
